Исправление замечаний - UserService, чтобы не было хардкода userId